# chat-app

./: CMakeLists.txt  generate_proto.py  requirements.txt  run_client.sh  run_server.sh
client/: CMakeLists.txt  chat_client.py  client.cc  client.h  client_main.cc  client_main.py
client/ui/: chat_widget.py  login_dialog.py  main_window.py
proto/: CMakeLists.txt  chat.proto
server/: CMakeLists.txt  auth_service.py  chat_server.py  database.py  db_manager.cc  db_manager.h  server.cc  server.h  server_main.cc  server_main.py  utils.py
